@@ -56,10 +56,7 @@ final class HintsDispatchExecutor
         this.isPaused = isPaused;
 
         scheduledDispatches = new ConcurrentHashMap<>();
-        executor = new JMXEnabledThreadPoolExecutor(1,
-                                                    maxThreads,
-                                                    1,
-                                                    TimeUnit.MINUTES,
+        executor = new JMXEnabledThreadPoolExecutor(maxThreads, 1, TimeUnit.MINUTES,
                                                     new LinkedBlockingQueue<>(),
                                                     new NamedThreadFactory("HintsDispatcher", Thread.MIN_PRIORITY),
                                                     "internal");
